# battery-aware-federated-learning

./: .gitignore  EXAMPLES.md  README.md  README.md.backup  pyproject.toml  run_multiple.sh  run_sweep.sh  sweep_runs.csv
my_awesome_app/: __init__.py  base_strategy.py  battery_simulator.py  battery_strategy.py  client_app.py  my_strategy.py  random_strategy.py  server_app.py  task.py  todo.txt
my_awesome_app/selection/: __init__.py  all_available.py  base.py  battery_weighted.py  random_subset.py
my_awesome_app/strategies/: __init__.py  base.py  battery_aware.py  random_client.py
