[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "battery-aware-fl"
version = "1.0.0"
description = "Simple battery-aware federated learning"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "wandb>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "angelo"

[tool.flwr.app.components]
serverapp = "my_awesome_app.server_app:app"
clientapp = "my_awesome_app.client_app:app"

[tool.flwr.app.config]
# Training configuration
num-server-rounds = 10        # Number of federated learning rounds
fraction-fit = 1.0            # Fraction of clients Flower samples (used by base FedAvg)
local-epochs = 5              # Number of local training epochs per client

# Client selection strategy
strategy = 1                  # 0 = random_baseline (uniform random selection)
                             # 1 = battery_aware (battery-weighted probabilistic selection)

# Battery-aware selection parameters (used when strategy=1)
sample-fraction = 0.5         # Fraction of available clients to select (0.0-1.0)
                             # With 200 clients: 0.5 = 100 clients, 0.3 = 60 clients
alpha = 2.0                   # Battery weight exponent (higher = more selective)
                             # alpha=1.0: linear, alpha=2.0: quadratic, alpha=3.0: cubic
min-battery-threshold = 0.2   # Minimum battery level required to participate (0.0-1.0)
                             # Clients below this threshold are excluded from selection

[tool.flwr.federations]
default = "small-simulation"

[tool.flwr.federations.small-simulation]
options.num-supernodes = 10

[tool.flwr.federations.medium-simulation]
options.num-supernodes = 50

[tool.flwr.federations.large-simulation]
options.num-supernodes = 200